--- a/Codes/2_Postprocessing.ipynb
+++ b/Codes/2_Postprocessing.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:00:23.601109400Z",
-     "start_time": "2024-01-28T07:00:22.437075500Z"
+     "end_time": "2024-01-28T07:47:14.781813800Z",
+     "start_time": "2024-01-28T07:47:14.776811600Z"
     }
    },
    "id": "c2cbce1004346646",
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -41,22 +41,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:00:24.126575600Z",
-     "start_time": "2024-01-28T07:00:23.604110Z"
+     "end_time": "2024-01-28T07:47:15.550613Z",
+     "start_time": "2024-01-28T07:47:14.927704700Z"
     }
    },
    "id": "453bf0e71da74202",
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:00:52.739719100Z",
-     "start_time": "2024-01-28T07:00:52.158853600Z"
+     "end_time": "2024-01-28T07:47:17.207652300Z",
+     "start_time": "2024-01-28T07:47:15.556613900Z"
     }
    },
    "outputs": [
@@ -66,28 +66,29 @@
      "text": [
       "lightGBM Accuracy: 0.8538345708499923\n",
       "XGBoost Accuracy: 0.8504076016407913\n",
-      "Soft Voting Accuracy: 0.8560153694376655\n"
+      "CatBoost Accuracy: 0.8423594163767589\n",
+      "Soft Voting Accuracy: 0.8567942260761202\n"
      ]
     }
    ],
    "source": [
     "gbm_model = joblib.load('../Files/gbm_model.pkl')\n",
     "xgb_model = joblib.load('../Files/xgb_model.pkl')\n",
-    "# cat_model = joblib.load('../Files/cat_model.pkl')\n",
+    "cat_model = joblib.load('../Files/rf_model.pkl')\n",
     "\n",
     "proba1 = gbm_model.predict(X_test, num_iteration=gbm_model.best_iteration)\n",
     "proba2 = xgb_model.predict(X_test_XG)\n",
-    "# proba3 = cat_model.predict_proba(X_test)\n",
+    "proba3 = cat_model.predict_proba(X_test)\n",
     "\n",
     "gbm_result = [int(pred.argmax()) for pred in proba1]\n",
     "xgb_result = np.argmax(proba2, axis=1)\n",
-    "# cat_result = np.argmax(proba3, axis=1)\n",
+    "cat_result = np.argmax(proba3, axis=1)\n",
     "\n",
     "print(\"lightGBM Accuracy:\", accuracy_score(y_test, gbm_result))\n",
     "print(\"XGBoost Accuracy:\", accuracy_score(y_test, xgb_result))\n",
-    "# print(\"CatBoost Accuracy:\", accuracy_score(y_test, cat_result))\n",
+    "print(\"CatBoost Accuracy:\", accuracy_score(y_test, cat_result))\n",
     "\n",
-    "average_proba = (proba1 + proba2) / 2\n",
+    "average_proba = (proba1 + proba2 + proba3) / 3\n",
     "soft_voting_result = np.argmax(average_proba, axis=1)\n",
     "print(\"Soft Voting Accuracy:\", accuracy_score(y_test, soft_voting_result))"
    ]
@@ -112,9 +113,14 @@
     "answer.to_csv('../Files/answer.csv', index=None)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T07:51:56.540556900Z",
+     "start_time": "2024-01-28T07:51:54.136202500Z"
+    }
    },
-   "id": "f270f51a1b2b3730"
+   "id": "f270f51a1b2b3730",
+   "execution_count": 9
   }
  ],
  "metadata": {
