--- a/Codes/Scratch.ipynb
+++ b/Codes/Scratch.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-25T07:47:52.119052400Z",
-     "start_time": "2024-01-25T07:47:52.115545800Z"
+     "end_time": "2024-01-28T07:30:16.532941Z",
+     "start_time": "2024-01-28T07:30:16.530434800Z"
     }
    },
    "outputs": [],
@@ -29,29 +29,29 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../Database/train_modified4.csv', index_col='ID')\n",
+    "train = pd.read_csv('../Database/train_preprocessed.csv', index_col='ID')\n",
     "X = train.drop(columns=['대출등급'])\n",
     "y = train['대출등급']"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-25T07:47:52.327369700Z",
-     "start_time": "2024-01-25T07:47:52.122053200Z"
+     "end_time": "2024-01-28T07:30:16.879354400Z",
+     "start_time": "2024-01-28T07:30:16.670206700Z"
     }
    },
    "id": "e96c5a159568ce9f",
-   "execution_count": 12
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "                 대출금액      연간소득  부채_대비_소득_비율  최근_2년간_연체_횟수     총상환원금  \\\nID                                                                     \nTRAIN_00000 -0.563848 -0.220218    -0.014287     -0.376102 -0.800303   \nTRAIN_00001 -0.377964  0.370332     0.087890     -0.376102 -0.436814   \nTRAIN_00002 -0.610319  0.020823    -0.321114     -0.376102  0.103276   \nTRAIN_00003 -0.377964  0.382384    -0.127783     -0.376102 -0.483274   \nTRAIN_00004 -0.029431 -0.222870     0.179044     -0.376102 -0.577932   \n...               ...       ...          ...           ...       ...   \nTRAIN_96289 -0.377964  1.165767    -0.299368     -0.376102  0.147972   \nTRAIN_96290  1.016166  0.382384    -0.423588     -0.376102 -0.232331   \nTRAIN_96291 -0.377964 -0.099698    -0.242471     -0.376102  0.648632   \nTRAIN_96292 -0.261786 -0.277164    -0.061949      1.799906  0.540861   \nTRAIN_96293 -0.935616 -0.437155    -0.225789     -0.376102 -0.220246   \n\n                총상환이자  대출기간  근로기간  주택소유상태  대출목적  \nID                                               \nTRAIN_00000 -0.972784     0     9       3     1  \nTRAIN_00001 -0.441082     1     2       1    10  \nTRAIN_00002 -0.627621     0     8       1     1  \nTRAIN_00003 -0.624977     0    11       1     1  \nTRAIN_00004 -0.634409     1    15       3     8  \n...               ...   ...   ...     ...   ...  \nTRAIN_96289  0.145249     0     2       1     3  \nTRAIN_96290  0.969667     1     2       1    10  \nTRAIN_96291 -0.424781     0     0       1     3  \nTRAIN_96292  0.885597     0     8       1     1  \nTRAIN_96293 -0.348181     0     2       3     3  \n\n[93478 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대출금액</th>\n      <th>연간소득</th>\n      <th>부채_대비_소득_비율</th>\n      <th>최근_2년간_연체_횟수</th>\n      <th>총상환원금</th>\n      <th>총상환이자</th>\n      <th>대출기간</th>\n      <th>근로기간</th>\n      <th>주택소유상태</th>\n      <th>대출목적</th>\n    </tr>\n    <tr>\n      <th>ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>TRAIN_00000</th>\n      <td>-0.563848</td>\n      <td>-0.220218</td>\n      <td>-0.014287</td>\n      <td>-0.376102</td>\n      <td>-0.800303</td>\n      <td>-0.972784</td>\n      <td>0</td>\n      <td>9</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00001</th>\n      <td>-0.377964</td>\n      <td>0.370332</td>\n      <td>0.087890</td>\n      <td>-0.376102</td>\n      <td>-0.436814</td>\n      <td>-0.441082</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00002</th>\n      <td>-0.610319</td>\n      <td>0.020823</td>\n      <td>-0.321114</td>\n      <td>-0.376102</td>\n      <td>0.103276</td>\n      <td>-0.627621</td>\n      <td>0</td>\n      <td>8</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00003</th>\n      <td>-0.377964</td>\n      <td>0.382384</td>\n      <td>-0.127783</td>\n      <td>-0.376102</td>\n      <td>-0.483274</td>\n      <td>-0.624977</td>\n      <td>0</td>\n      <td>11</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00004</th>\n      <td>-0.029431</td>\n      <td>-0.222870</td>\n      <td>0.179044</td>\n      <td>-0.376102</td>\n      <td>-0.577932</td>\n      <td>-0.634409</td>\n      <td>1</td>\n      <td>15</td>\n      <td>3</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96289</th>\n      <td>-0.377964</td>\n      <td>1.165767</td>\n      <td>-0.299368</td>\n      <td>-0.376102</td>\n      <td>0.147972</td>\n      <td>0.145249</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96290</th>\n      <td>1.016166</td>\n      <td>0.382384</td>\n      <td>-0.423588</td>\n      <td>-0.376102</td>\n      <td>-0.232331</td>\n      <td>0.969667</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96291</th>\n      <td>-0.377964</td>\n      <td>-0.099698</td>\n      <td>-0.242471</td>\n      <td>-0.376102</td>\n      <td>0.648632</td>\n      <td>-0.424781</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96292</th>\n      <td>-0.261786</td>\n      <td>-0.277164</td>\n      <td>-0.061949</td>\n      <td>1.799906</td>\n      <td>0.540861</td>\n      <td>0.885597</td>\n      <td>0</td>\n      <td>8</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96293</th>\n      <td>-0.935616</td>\n      <td>-0.437155</td>\n      <td>-0.225789</td>\n      <td>-0.376102</td>\n      <td>-0.220246</td>\n      <td>-0.348181</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>93478 rows × 10 columns</p>\n</div>"
+      "text/plain": "                 대출금액      연간소득  부채_대비_소득_비율      총계좌수     총상환원금     총상환이자  \\\nID                                                                           \nTRAIN_00000 -0.563848 -0.220218    -0.014287 -0.852449 -0.800303 -0.972784   \nTRAIN_00001 -0.377964  0.370332     0.087890 -0.356109 -0.436814 -0.441082   \nTRAIN_00002 -0.610319  0.020823    -0.321114 -0.935172  0.103276 -0.627621   \nTRAIN_00003 -0.377964  0.382384    -0.127783 -0.852449 -0.483274 -0.624977   \nTRAIN_00004 -0.029431 -0.222870     0.179044 -0.521556 -0.577932 -0.634409   \n...               ...       ...          ...       ...       ...       ...   \nTRAIN_96289 -0.377964  1.165767    -0.299368  0.636570  0.147972  0.145249   \nTRAIN_96290  1.016166  0.382384    -0.423588 -0.025216 -0.232331  0.969667   \nTRAIN_96291 -0.377964 -0.099698    -0.242471 -0.273386  0.648632 -0.424781   \nTRAIN_96292 -0.261786 -0.277164    -0.061949 -0.356109  0.540861  0.885597   \nTRAIN_96293 -0.935616 -0.437155    -0.225789 -0.935172 -0.220246 -0.348181   \n\n             대출기간  근로기간  주택소유상태  대출목적  \nID                                     \nTRAIN_00000     0     6       3     1  \nTRAIN_00001     1    10       1    10  \nTRAIN_00002     0     5       1     1  \nTRAIN_00003     0     8       1     1  \nTRAIN_00004     1     0       3     8  \n...           ...   ...     ...   ...  \nTRAIN_96289     0    10       1     3  \nTRAIN_96290     1    10       1    10  \nTRAIN_96291     0     1       1     3  \nTRAIN_96292     0     5       1     1  \nTRAIN_96293     0    10       3     3  \n\n[96294 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대출금액</th>\n      <th>연간소득</th>\n      <th>부채_대비_소득_비율</th>\n      <th>총계좌수</th>\n      <th>총상환원금</th>\n      <th>총상환이자</th>\n      <th>대출기간</th>\n      <th>근로기간</th>\n      <th>주택소유상태</th>\n      <th>대출목적</th>\n    </tr>\n    <tr>\n      <th>ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>TRAIN_00000</th>\n      <td>-0.563848</td>\n      <td>-0.220218</td>\n      <td>-0.014287</td>\n      <td>-0.852449</td>\n      <td>-0.800303</td>\n      <td>-0.972784</td>\n      <td>0</td>\n      <td>6</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00001</th>\n      <td>-0.377964</td>\n      <td>0.370332</td>\n      <td>0.087890</td>\n      <td>-0.356109</td>\n      <td>-0.436814</td>\n      <td>-0.441082</td>\n      <td>1</td>\n      <td>10</td>\n      <td>1</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00002</th>\n      <td>-0.610319</td>\n      <td>0.020823</td>\n      <td>-0.321114</td>\n      <td>-0.935172</td>\n      <td>0.103276</td>\n      <td>-0.627621</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00003</th>\n      <td>-0.377964</td>\n      <td>0.382384</td>\n      <td>-0.127783</td>\n      <td>-0.852449</td>\n      <td>-0.483274</td>\n      <td>-0.624977</td>\n      <td>0</td>\n      <td>8</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_00004</th>\n      <td>-0.029431</td>\n      <td>-0.222870</td>\n      <td>0.179044</td>\n      <td>-0.521556</td>\n      <td>-0.577932</td>\n      <td>-0.634409</td>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96289</th>\n      <td>-0.377964</td>\n      <td>1.165767</td>\n      <td>-0.299368</td>\n      <td>0.636570</td>\n      <td>0.147972</td>\n      <td>0.145249</td>\n      <td>0</td>\n      <td>10</td>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96290</th>\n      <td>1.016166</td>\n      <td>0.382384</td>\n      <td>-0.423588</td>\n      <td>-0.025216</td>\n      <td>-0.232331</td>\n      <td>0.969667</td>\n      <td>1</td>\n      <td>10</td>\n      <td>1</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96291</th>\n      <td>-0.377964</td>\n      <td>-0.099698</td>\n      <td>-0.242471</td>\n      <td>-0.273386</td>\n      <td>0.648632</td>\n      <td>-0.424781</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96292</th>\n      <td>-0.261786</td>\n      <td>-0.277164</td>\n      <td>-0.061949</td>\n      <td>-0.356109</td>\n      <td>0.540861</td>\n      <td>0.885597</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TRAIN_96293</th>\n      <td>-0.935616</td>\n      <td>-0.437155</td>\n      <td>-0.225789</td>\n      <td>-0.935172</td>\n      <td>-0.220246</td>\n      <td>-0.348181</td>\n      <td>0</td>\n      <td>10</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>96294 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-25T07:47:52.342499900Z",
-     "start_time": "2024-01-25T07:47:52.337754900Z"
+     "end_time": "2024-01-28T07:30:16.954644400Z",
+     "start_time": "2024-01-28T07:30:16.933727Z"
     }
    },
    "id": "dacd7c144db6161b",
-   "execution_count": 13
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -360,6 +360,51 @@
    },
    "id": "4c108ea8c9b915c6",
    "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from pytorch_tabnet.multitask import TabNetMultiTaskClassifier\n",
+    "\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
+    "\n",
+    "y_train = np.reshape(y_train, (77034, 1))\n",
+    "y_test = np.reshape(y_test, (19259, 1))\n",
+    "\n",
+    "model = TabNetMultiTaskClassifier(\n",
+    "    n_d=8,  # Decision 단계의 특성 차원\n",
+    "    n_a=8,  # Attention 단계의 특성 차원\n",
+    "    n_steps=5,  # Attention 단계의 반복 횟수\n",
+    "    gamma=1.5,  # Regularization 강도\n",
+    "    cat_idxs=[i for i in range(9, 13)],  # 범주형 특성의 인덱스\n",
+    "    cat_dims=[2, 16, 4, 12],  # 범주형 특성의 차원\n",
+    "    device_name=device,\n",
+    ")\n",
+    "\n",
+    "model.fit(\n",
+    "    X_train=X_train.values,\n",
+    "    y_train=y_train,\n",
+    "    eval_set=[(X_test.values, y_test)],\n",
+    "    max_epochs=2,\n",
+    "    patience=5,\n",
+    "    loss_fn=F.cross_entropy,\n",
+    "    batch_size=64,\n",
+    "    virtual_batch_size=32,\n",
+    ")\n",
+    "\n",
+    "preds = model.predict(X_test.values)\n",
+    "print(\"TabNet Classifier Accuracy:\", accuracy_score(y_test, preds))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4e658d5ee694797"
   }
  ],
  "metadata": {
