--- a/Codes/0_Preprocessing.ipynb
+++ b/Codes/0_Preprocessing.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:16.989158Z",
-     "start_time": "2024-01-29T01:45:15.815071700Z"
+     "end_time": "2024-01-29T02:29:14.745600200Z",
+     "start_time": "2024-01-29T02:29:13.876809900Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:18.341582Z",
-     "start_time": "2024-01-29T01:45:18.128318400Z"
+     "end_time": "2024-01-29T02:29:14.757277400Z",
+     "start_time": "2024-01-29T02:29:14.746600100Z"
     }
    },
    "id": "b9025e7bcb3017aa",
@@ -64,8 +64,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:21.239668400Z",
-     "start_time": "2024-01-29T01:45:19.748162600Z"
+     "end_time": "2024-01-29T02:29:15.113214900Z",
+     "start_time": "2024-01-29T02:29:14.755277Z"
     }
    },
    "id": "bbfeec96fadd4e88",
@@ -80,8 +80,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:21.275606100Z",
-     "start_time": "2024-01-29T01:45:21.244655300Z"
+     "end_time": "2024-01-29T02:29:15.134366500Z",
+     "start_time": "2024-01-29T02:29:15.123860200Z"
     }
    },
    "id": "3e8b058db62b7827",
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:21.700789400Z",
-     "start_time": "2024-01-29T01:45:21.261645200Z"
+     "end_time": "2024-01-29T02:29:15.243642600Z",
+     "start_time": "2024-01-29T02:29:15.129365200Z"
     }
    },
    "id": "26d76cdd78082c12",
@@ -123,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:23.519620800Z",
-     "start_time": "2024-01-29T01:45:21.944734200Z"
+     "end_time": "2024-01-29T02:29:15.948520600Z",
+     "start_time": "2024-01-29T02:29:15.249644Z"
     }
    },
    "id": "52974245ed8e9b22",
@@ -144,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:24.588708200Z",
-     "start_time": "2024-01-29T01:45:24.231588300Z"
+     "end_time": "2024-01-29T02:29:16.051385400Z",
+     "start_time": "2024-01-29T02:29:15.959523200Z"
     }
    },
    "id": "5d02926bb5021110",
@@ -160,8 +160,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:25.319263800Z",
-     "start_time": "2024-01-29T01:45:25.225146700Z"
+     "end_time": "2024-01-29T02:29:16.063254200Z",
+     "start_time": "2024-01-29T02:29:16.052385200Z"
     }
    },
    "id": "e6ef101cfde63ded",
@@ -181,8 +181,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:26.302465400Z",
-     "start_time": "2024-01-29T01:45:25.965930900Z"
+     "end_time": "2024-01-29T02:29:16.148527800Z",
+     "start_time": "2024-01-29T02:29:16.059253400Z"
     }
    },
    "id": "18aef1f17656ca6d",
@@ -199,8 +199,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:27.134807800Z",
-     "start_time": "2024-01-29T01:45:26.978459900Z"
+     "end_time": "2024-01-29T02:29:16.202523900Z",
+     "start_time": "2024-01-29T02:29:16.176534900Z"
     }
    },
    "id": "6b466c3ac2beb35c",
@@ -219,8 +219,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:28.149730600Z",
-     "start_time": "2024-01-29T01:45:28.052139Z"
+     "end_time": "2024-01-29T02:29:16.240919700Z",
+     "start_time": "2024-01-29T02:29:16.207524700Z"
     }
    },
    "id": "c522b3c4e08e077b",
@@ -238,8 +238,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:29.161045100Z",
-     "start_time": "2024-01-29T01:45:29.102563400Z"
+     "end_time": "2024-01-29T02:29:16.241919800Z",
+     "start_time": "2024-01-29T02:29:16.230067500Z"
     }
    },
    "id": "789e1728bc9ac490",
@@ -282,8 +282,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:29.902818900Z",
-     "start_time": "2024-01-29T01:45:29.679850800Z"
+     "end_time": "2024-01-29T02:29:16.308802300Z",
+     "start_time": "2024-01-29T02:29:16.239919400Z"
     }
    },
    "id": "1e8e5a7e6653fe98",
@@ -336,8 +336,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:35.333505200Z",
-     "start_time": "2024-01-29T01:45:30.721884100Z"
+     "end_time": "2024-01-29T02:29:18.073901600Z",
+     "start_time": "2024-01-29T02:29:16.312803400Z"
     }
    },
    "id": "2d15cd5f37ce9bf8",
@@ -355,8 +355,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:40.544646100Z",
-     "start_time": "2024-01-29T01:45:40.355227200Z"
+     "end_time": "2024-01-29T02:29:18.192769600Z",
+     "start_time": "2024-01-29T02:29:18.078902400Z"
     }
    },
    "id": "6e0e5a71d0b4fcf",
@@ -409,8 +409,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T01:45:54.342125400Z",
-     "start_time": "2024-01-29T01:45:50.748343Z"
+     "end_time": "2024-01-29T02:29:19.849721900Z",
+     "start_time": "2024-01-29T02:29:18.188768600Z"
     }
    },
    "id": "ac996a8cae05a69d",
@@ -421,17 +421,17 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "([<matplotlib.patches.Wedge at 0x22a495ccc50>,\n  <matplotlib.patches.Wedge at 0x22a495cd150>,\n  <matplotlib.patches.Wedge at 0x22a495ce310>,\n  <matplotlib.patches.Wedge at 0x22a495cebd0>,\n  <matplotlib.patches.Wedge at 0x22a495dc1d0>,\n  <matplotlib.patches.Wedge at 0x22a495dd350>,\n  <matplotlib.patches.Wedge at 0x22a495de110>],\n [Text(-1.0679405846819419, -0.26363404102883226, '1'),\n  Text(0.5394722331155161, -0.9586290782661241, '2'),\n  Text(1.0173275069415357, 0.41838348870398734, '0'),\n  Text(0.2161230797178815, 1.0785596016972165, '3'),\n  Text(-0.505845100747086, 0.9767910390918677, '4'),\n  Text(-0.7747874672170625, 0.7808356937559716, '5'),\n  Text(-0.8328814037911351, 0.718546148287574, '6')])"
+      "text/plain": "([<matplotlib.patches.Wedge at 0x21b6250ac50>,\n  <matplotlib.patches.Wedge at 0x21b62466850>,\n  <matplotlib.patches.Wedge at 0x21b65ead9d0>,\n  <matplotlib.patches.Wedge at 0x21b65eaea10>,\n  <matplotlib.patches.Wedge at 0x21b65eaf810>,\n  <matplotlib.patches.Wedge at 0x21b65ed0a10>,\n  <matplotlib.patches.Wedge at 0x21b65ed1810>],\n [Text(-1.0679405846819419, -0.26363404102883226, '1'),\n  Text(0.5394722331155161, -0.9586290782661241, '2'),\n  Text(1.0173275069415357, 0.41838348870398734, '0'),\n  Text(0.2161230797178815, 1.0785596016972165, '3'),\n  Text(-0.505845100747086, 0.9767910390918677, '4'),\n  Text(-0.7747874672170625, 0.7808356937559716, '5'),\n  Text(-0.8328814037911351, 0.718546148287574, '6')])"
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "(-1.0999985208973693,\n 1.0999980368218536,\n -1.0999998444812455,\n 1.0999991351940326)"
+      "text/plain": "(-1.099998520897369,\n 1.099998036821854,\n -1.0999998444812455,\n 1.0999991351940324)"
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -439,7 +439,7 @@
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Class Distribution')"
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,29 +467,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T02:22:14.438224100Z",
-     "start_time": "2024-01-29T02:22:14.081625300Z"
+     "end_time": "2024-01-29T02:29:20.096731100Z",
+     "start_time": "2024-01-29T02:29:19.842720500Z"
     }
    },
    "id": "9405f4875588e8f2",
-   "execution_count": 24
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "([<matplotlib.patches.Wedge at 0x22a485907d0>,\n  <matplotlib.patches.Wedge at 0x22a48599f90>,\n  <matplotlib.patches.Wedge at 0x22a48591f90>,\n  <matplotlib.patches.Wedge at 0x22a48593190>,\n  <matplotlib.patches.Wedge at 0x22a48593f50>,\n  <matplotlib.patches.Wedge at 0x22a48581090>,\n  <matplotlib.patches.Wedge at 0x22a48581e10>],\n [Text(-1.065985020297715, 0.27143311607259774, '0'),\n  Text(-0.8768457179688377, -0.6641849041341679, '2'),\n  Text(-0.02742365060035697, -1.0996581029518901, '1'),\n  Text(0.842648986731364, -0.7070662523134631, '4'),\n  Text(1.078189697277103, 0.21796095220362116, '3'),\n  Text(0.5018315070624699, 0.9788591004426583, '5'),\n  Text(-0.4524160749538973, 1.0026563195448925, '6')])"
+      "text/plain": "([<matplotlib.patches.Wedge at 0x21b65f99490>,\n  <matplotlib.patches.Wedge at 0x21b65f6f210>,\n  <matplotlib.patches.Wedge at 0x21b65f9b750>,\n  <matplotlib.patches.Wedge at 0x21b65f46cd0>,\n  <matplotlib.patches.Wedge at 0x21b65fc9f10>,\n  <matplotlib.patches.Wedge at 0x21b65fcb690>,\n  <matplotlib.patches.Wedge at 0x21b65fe88d0>],\n [Text(-1.065985020297715, 0.27143311607259774, '0'),\n  Text(-0.8768457179688377, -0.6641849041341679, '2'),\n  Text(-0.02742365060035697, -1.0996581029518901, '1'),\n  Text(0.842648986731364, -0.7070662523134631, '4'),\n  Text(1.078189697277103, 0.21796095220362116, '3'),\n  Text(0.5018315070624699, 0.9788591004426583, '5'),\n  Text(-0.4524160749538973, 1.0026563195448925, '6')])"
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "(-1.099998936420102,\n 1.0999989364196918,\n -1.0999999898934765,\n 1.0999999898936226)"
+      "text/plain": "(-1.0999989364201022,\n 1.0999989364196918,\n -1.0999999898934762,\n 1.0999999898936228)"
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -497,7 +497,7 @@
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Class Distribution')"
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,12 +524,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T02:22:28.537356900Z",
-     "start_time": "2024-01-29T02:22:17.183951600Z"
+     "end_time": "2024-01-29T02:29:26.178830900Z",
+     "start_time": "2024-01-29T02:29:20.092730200Z"
     }
    },
    "id": "21b09f03f274da49",
-   "execution_count": 25
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -618,8 +618,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T13:45:27.425405600Z",
-     "start_time": "2024-01-28T13:45:27.348819500Z"
+     "end_time": "2024-01-29T02:29:26.292019300Z",
+     "start_time": "2024-01-29T02:29:26.174830100Z"
     }
    },
    "id": "298ffb7f5f3b77b4",
@@ -655,8 +655,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T13:45:29.105934600Z",
-     "start_time": "2024-01-28T13:45:28.870350900Z"
+     "end_time": "2024-01-29T02:29:26.859834300Z",
+     "start_time": "2024-01-29T02:29:26.287017800Z"
     }
    },
    "id": "af833c0711c982be",
@@ -748,8 +748,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T13:45:32.018603600Z",
-     "start_time": "2024-01-28T13:45:31.143907300Z"
+     "end_time": "2024-01-29T02:29:28.024373800Z",
+     "start_time": "2024-01-29T02:29:26.872837600Z"
     }
    },
    "id": "8f8662b7e8a017eb",
@@ -765,12 +765,38 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T02:22:42.205027400Z",
-     "start_time": "2024-01-29T02:22:42.162730900Z"
+     "end_time": "2024-01-29T02:29:29.054170200Z",
+     "start_time": "2024-01-29T02:29:29.014699100Z"
     }
    },
    "id": "d63e5cc200bafb45",
-   "execution_count": 26
+   "execution_count": 22
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                대출금액      연간소득  부채_대비_소득_비율      총계좌수     총상환원금     총상환이자  \\\nID                                                                          \nTEST_00000 -0.145609  0.382384     0.007757 -1.100618 -0.416264 -0.639752   \nTEST_00001 -0.958851 -0.039727    -0.105441 -0.025216 -0.800303 -0.972784   \nTEST_00002 -0.099138  0.563165    -0.326774 -0.438832  0.938444 -0.332588   \nTEST_00003 -0.377964 -0.280478    -0.168594  0.388400 -0.149337 -0.332806   \nTEST_00004  0.899989 -0.388947     0.331266 -1.100618  0.416008  0.423926   \n...              ...       ...          ...       ...       ...       ...   \nTEST_64192  1.132344 -0.159958     0.080443  0.140230  0.471937  0.761347   \nTEST_64193  1.132344  0.153395    -0.218044  0.057507  0.134381  1.855991   \nTEST_64194 -1.179589 -0.545623     0.280625  0.636570 -0.672333 -0.789053   \nTEST_64195 -0.656790 -0.280478     0.180534  1.298355  0.503077  0.394458   \nTEST_64196 -1.191206  0.864466    -0.307113 -1.266065 -0.499760 -0.861564   \n\n            대출기간  근로기간  대출목적  \nID                            \nTEST_00000     0     8    10  \nTEST_00001     0     5     1  \nTEST_00002     0     6     3  \nTEST_00003     0     5     3  \nTEST_00004     0     5     3  \n...          ...   ...   ...  \nTEST_64192     0     3     1  \nTEST_64193     1    10     1  \nTEST_64194     0    10     1  \nTEST_64195     0    10     1  \nTEST_64196     0     9     1  \n\n[64197 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대출금액</th>\n      <th>연간소득</th>\n      <th>부채_대비_소득_비율</th>\n      <th>총계좌수</th>\n      <th>총상환원금</th>\n      <th>총상환이자</th>\n      <th>대출기간</th>\n      <th>근로기간</th>\n      <th>대출목적</th>\n    </tr>\n    <tr>\n      <th>ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>TEST_00000</th>\n      <td>-0.145609</td>\n      <td>0.382384</td>\n      <td>0.007757</td>\n      <td>-1.100618</td>\n      <td>-0.416264</td>\n      <td>-0.639752</td>\n      <td>0</td>\n      <td>8</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>TEST_00001</th>\n      <td>-0.958851</td>\n      <td>-0.039727</td>\n      <td>-0.105441</td>\n      <td>-0.025216</td>\n      <td>-0.800303</td>\n      <td>-0.972784</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TEST_00002</th>\n      <td>-0.099138</td>\n      <td>0.563165</td>\n      <td>-0.326774</td>\n      <td>-0.438832</td>\n      <td>0.938444</td>\n      <td>-0.332588</td>\n      <td>0</td>\n      <td>6</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TEST_00003</th>\n      <td>-0.377964</td>\n      <td>-0.280478</td>\n      <td>-0.168594</td>\n      <td>0.388400</td>\n      <td>-0.149337</td>\n      <td>-0.332806</td>\n      <td>0</td>\n      <td>5</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>TEST_00004</th>\n      <td>0.899989</td>\n      <td>-0.388947</td>\n      <td>0.331266</td>\n      <td>-1.100618</td>\n      <td>0.416008</td>\n      <td>0.423926</td>\n      <td>0</td>\n      <td>5</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>TEST_64192</th>\n      <td>1.132344</td>\n      <td>-0.159958</td>\n      <td>0.080443</td>\n      <td>0.140230</td>\n      <td>0.471937</td>\n      <td>0.761347</td>\n      <td>0</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TEST_64193</th>\n      <td>1.132344</td>\n      <td>0.153395</td>\n      <td>-0.218044</td>\n      <td>0.057507</td>\n      <td>0.134381</td>\n      <td>1.855991</td>\n      <td>1</td>\n      <td>10</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TEST_64194</th>\n      <td>-1.179589</td>\n      <td>-0.545623</td>\n      <td>0.280625</td>\n      <td>0.636570</td>\n      <td>-0.672333</td>\n      <td>-0.789053</td>\n      <td>0</td>\n      <td>10</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TEST_64195</th>\n      <td>-0.656790</td>\n      <td>-0.280478</td>\n      <td>0.180534</td>\n      <td>1.298355</td>\n      <td>0.503077</td>\n      <td>0.394458</td>\n      <td>0</td>\n      <td>10</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>TEST_64196</th>\n      <td>-1.191206</td>\n      <td>0.864466</td>\n      <td>-0.307113</td>\n      <td>-1.266065</td>\n      <td>-0.499760</td>\n      <td>-0.861564</td>\n      <td>0</td>\n      <td>9</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>64197 rows × 9 columns</p>\n</div>"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-29T04:21:42.037020400Z",
+     "start_time": "2024-01-29T04:21:42.022304400Z"
+    }
+   },
+   "id": "9b2e6d9dfd7b5786",
+   "execution_count": 25
   },
   {
    "cell_type": "code",
