--- a/Codes/2_Postprocessing.ipynb
+++ b/Codes/2_Postprocessing.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:47:14.781813800Z",
-     "start_time": "2024-01-28T07:47:14.776811600Z"
+     "end_time": "2024-01-29T05:33:58.715479100Z",
+     "start_time": "2024-01-29T05:33:58.534277400Z"
     }
    },
    "id": "c2cbce1004346646",
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -35,28 +35,29 @@
     "X = train.drop(columns=['대출등급'])\n",
     "y = train['대출등급']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
     "X_test_XG = xgb.DMatrix(X_test)\n",
     "test_XG = xgb.DMatrix(test)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:47:15.550613Z",
-     "start_time": "2024-01-28T07:47:14.927704700Z"
+     "end_time": "2024-01-29T05:34:14.872432900Z",
+     "start_time": "2024-01-29T05:34:12.933472600Z"
     }
    },
    "id": "453bf0e71da74202",
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-28T07:47:17.207652300Z",
-     "start_time": "2024-01-28T07:47:15.556613900Z"
+     "end_time": "2024-01-29T05:40:02.253981300Z",
+     "start_time": "2024-01-29T05:39:58.825605200Z"
     }
    },
    "outputs": [
@@ -64,27 +65,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lightGBM Accuracy: 0.8538345708499923\n",
-      "XGBoost Accuracy: 0.8504076016407913\n",
-      "CatBoost Accuracy: 0.8423594163767589\n",
-      "Soft Voting Accuracy: 0.8567942260761202\n"
+      "lightGBM Accuracy: 0.8684251518770445\n",
+      "XGBoost Accuracy: 0.8619346798899216\n",
+      "CatBoost Accuracy: 0.8531595617633314\n",
+      "Soft Voting Accuracy: 0.8707097980165117\n"
      ]
     }
    ],
    "source": [
-    "gbm_model = joblib.load('../Files/gbm_model.pkl')\n",
+    "lgb_model = joblib.load('../Files/lgb_model.pkl')\n",
     "xgb_model = joblib.load('../Files/xgb_model.pkl')\n",
-    "cat_model = joblib.load('../Files/rf_model.pkl')\n",
+    "cat_model = joblib.load('../Files/cat_model.pkl')\n",
     "\n",
-    "proba1 = gbm_model.predict(X_test, num_iteration=gbm_model.best_iteration)\n",
+    "proba1 = lgb_model.predict(X_test, num_iteration=lgb_model.best_iteration)\n",
     "proba2 = xgb_model.predict(X_test_XG)\n",
     "proba3 = cat_model.predict_proba(X_test)\n",
     "\n",
-    "gbm_result = [int(pred.argmax()) for pred in proba1]\n",
+    "lgb_result = [int(pred.argmax()) for pred in proba1]\n",
     "xgb_result = np.argmax(proba2, axis=1)\n",
     "cat_result = np.argmax(proba3, axis=1)\n",
     "\n",
-    "print(\"lightGBM Accuracy:\", accuracy_score(y_test, gbm_result))\n",
+    "print(\"lightGBM Accuracy:\", accuracy_score(y_test, lgb_result))\n",
     "print(\"XGBoost Accuracy:\", accuracy_score(y_test, xgb_result))\n",
     "print(\"CatBoost Accuracy:\", accuracy_score(y_test, cat_result))\n",
     "\n",
@@ -97,7 +98,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "proba1 = gbm_model.predict(test, num_iteration=gbm_model.best_iteration)\n",
+    "proba1 = lgb_model.predict(test, num_iteration=lgb_model.best_iteration)\n",
     "proba2 = xgb_model.predict(test_XG)\n",
     "proba3 = cat_model.predict_proba(test)\n",
     "\n",
