--- a/Codes/0_Preprocessing.ipynb
+++ b/Codes/0_Preprocessing.ipynb
@@ -759,8 +759,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "train.drop(columns=['최근_2년간_연체_횟수', '주택소유상태', '총연체금액', '연체계좌수'], inplace=True)\n",
-    "test.drop(columns=['최근_2년간_연체_횟수', '주택소유상태', '총연체금액', '연체계좌수'], inplace=True)"
+    "train.drop(columns=['최근_2년간_연체_횟수', '총연체금액', '연체계좌수'], inplace=True)\n",
+    "test.drop(columns=['최근_2년간_연체_횟수', '총연체금액', '연체계좌수'], inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
