--- a/Codes/Parameter_Tuning.ipynb
+++ b/Codes/Parameter_Tuning.ipynb
@@ -35,7 +35,7 @@
     "X = train.drop(columns=['대출등급'])\n",
     "y = train['대출등급']\n",
     "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "smote = SMOTE(random_state=42)\n",
     "X_res, y_res = smote.fit_resample(X_train, y_train)"
    ],
