--- a/Codes/2_Postprocessing.ipynb
+++ b/Codes/2_Postprocessing.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T06:02:18.038543200Z",
-     "start_time": "2024-01-30T06:02:18.034037100Z"
+     "end_time": "2024-01-30T14:12:47.875244Z",
+     "start_time": "2024-01-30T14:12:47.579214600Z"
     }
    },
    "id": "c2cbce1004346646",
-   "execution_count": 4
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -42,22 +42,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T06:03:58.186111900Z",
-     "start_time": "2024-01-30T06:03:57.674151300Z"
+     "end_time": "2024-01-30T14:12:48.444168400Z",
+     "start_time": "2024-01-30T14:12:47.875244Z"
     }
    },
    "id": "453bf0e71da74202",
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-30T06:04:01.826799200Z",
-     "start_time": "2024-01-30T06:03:58.190113400Z"
+     "end_time": "2024-01-30T14:22:27.956980400Z",
+     "start_time": "2024-01-30T14:22:25.862967300Z"
     }
    },
    "outputs": [
@@ -65,10 +65,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lightGBM Accuracy: 0.8687366945324264\n",
-      "XGBoost Accuracy: 0.8602731190612182\n",
+      "float64\n",
+      "(19259, 7)\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "lightGBM Accuracy: 0.8726309777247001\n",
+      "XGBoost Accuracy: 0.7917337348772002\n",
       "CatBoost Accuracy: 0.8607404330442909\n",
-      "Soft Voting Accuracy: 0.8721117399657303\n"
+      "Soft Voting Accuracy: 0.8734098343631549\n"
      ]
     }
    ],
@@ -84,6 +88,11 @@
     "lgb_result = [int(pred.argmax()) for pred in proba1]\n",
     "xgb_result = np.argmax(proba2, axis=1)\n",
     "cat_result = np.argmax(proba3, axis=1)\n",
+    "\n",
+    "print(proba3.dtype)\n",
+    "print(proba3.shape)\n",
+    "print(type(proba3))\n",
+    "print(type(y_test))\n",
     "\n",
     "print(\"lightGBM Accuracy:\", accuracy_score(y_test, lgb_result))\n",
     "print(\"XGBoost Accuracy:\", accuracy_score(y_test, xgb_result))\n",
