--- a/Codes/Parameter_Tuning.ipynb
+++ b/Codes/Parameter_Tuning.ipynb
@@ -17,6 +17,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from pytorch_tabnet.multitask import TabNetMultiTaskClassifier\n",
+    "from Esemble import Esemble\n",
     "\n",
     "import torch\n",
     "import warnings\n",
@@ -48,6 +49,66 @@
    },
    "id": "4c73b55507c64d99",
    "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "train_for_DNN = pd.read_csv('../Database/train_for_DNN.csv', index_col='ID')\n",
+    "X_for_DNN = train_for_DNN.drop(columns=['대출등급'])\n",
+    "y_for_DNN = train_for_DNN['대출등급']\n",
+    "X_train_DNN, X_val_DNN, y_train_DNN, y_val_DNN = train_test_split(X_for_DNN, y_for_DNN, test_size=0.2, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a0ed409de64e23a8"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "Tuning = False\n",
+    "E = Esemble(4, X_train_DNN, X_val_DNN, y_train_DNN, y_val_DNN, 100, Tuning)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b06fddc1cd7b5221"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
+    "\n",
+    "params = {\n",
+    "    'verbose': True,\n",
+    "    'device_name': device,\n",
+    "    'cat_dims': [2, 11, 4, 12],\n",
+    "    'cat_idxs': [i for i in range(9, 13)],\n",
+    "\n",
+    "    'n_d': 8,  # Decision 단계의 특성 차원\n",
+    "    'n_a': 8,  # Attention 단계의 특성 차원\n",
+    "    'n_steps': 5,  # Attention 단계의 반복 횟수\n",
+    "    'gamma': 0.8,  # Regularization 강도\n",
+    "}\n",
+    "\n",
+    "if Tuning:\n",
+    "    study = optuna.create_study(direction='maximize')\n",
+    "    study.optimize(E.objective, n_trials=100)\n",
+    "\n",
+    "    print('Number of finished trials:', len(study.trials))\n",
+    "    print('Best trial:', study.best_trial.params)\n",
+    "\n",
+    "if not Tuning:\n",
+    "    proba3 = E.TabNet(params)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2d31116c1387cf5e"
   },
   {
    "cell_type": "code",
