--- a/Codes/2_Postprocessing.ipynb
+++ b/Codes/2_Postprocessing.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T14:12:47.875244Z",
-     "start_time": "2024-01-30T14:12:47.579214600Z"
+     "end_time": "2024-02-01T05:47:18.604219100Z",
+     "start_time": "2024-02-01T05:47:18.232182Z"
     }
    },
    "id": "c2cbce1004346646",
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T14:12:48.444168400Z",
-     "start_time": "2024-01-30T14:12:47.875244Z"
+     "end_time": "2024-02-01T05:47:19.841454100Z",
+     "start_time": "2024-02-01T05:47:19.163225900Z"
     }
    },
    "id": "453bf0e71da74202",
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-30T14:22:27.956980400Z",
-     "start_time": "2024-01-30T14:22:25.862967300Z"
+     "end_time": "2024-02-01T05:47:25.176721300Z",
+     "start_time": "2024-02-01T05:47:20.779435100Z"
     }
    },
    "outputs": [
@@ -69,10 +69,10 @@
       "(19259, 7)\n",
       "<class 'numpy.ndarray'>\n",
       "<class 'pandas.core.series.Series'>\n",
-      "lightGBM Accuracy: 0.8726309777247001\n",
-      "XGBoost Accuracy: 0.7917337348772002\n",
-      "CatBoost Accuracy: 0.8607404330442909\n",
-      "Soft Voting Accuracy: 0.8734098343631549\n"
+      "lightGBM Accuracy: 0.8734617581390519\n",
+      "XGBoost Accuracy: 0.8628173840801703\n",
+      "CatBoost Accuracy: 0.8624019938729944\n",
+      "Soft Voting Accuracy: 0.8756944805026221\n"
      ]
     }
    ],
@@ -125,12 +125,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T06:04:17.175238200Z",
-     "start_time": "2024-01-30T06:04:08.555737900Z"
+     "end_time": "2024-02-01T05:47:49.681724300Z",
+     "start_time": "2024-02-01T05:47:38.434172Z"
     }
    },
    "id": "f270f51a1b2b3730",
-   "execution_count": 9
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4a5636064957d0b"
   }
  ],
  "metadata": {
